tests/NormalTests/paczka1/fuzzy1/50991405.err
Error in line 8: OQABckrqaw A993 -5,3
Error in line 9: OQABckrqaw A993 82,35
Error in line 15: 1PO22YRCx A481 20,0
Error in line 24: A993 A368 98,85
Error in line 32: voJ3zfWRA A993 86,0
Error in line 30: FIYQj4g5 A993 48,9
Error in line 35: voJ3zfWRA A41 90,5
